# pytest-bisect-tests

./: LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: pytest.yaml
integration_data/: collection_error.py  faulty_test.py  test_groups_test.py
pytest_bisect_tests/: bisect.py  cli.py  pytest_plugin.py  pytest_runner.py
tests/: bisect_test.py  integration_test.py
