[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pytest_bisect_tests"]

[project]
name = "pytest-bisect-tests"
version = "0.1.0"
authors = [{ name = "Maciej Gol", email = "suchar.kroolik1@gmail.com" }]
description = "Find tests leaking state and affecting other"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/maciej-gol/pytest-bisect-tests"
Issues = "https://github.com/maciej-gol/pytest-bisect-tests/issues"

[project.scripts]
pytest-bisect-tests = "pytest_bisect_tests.cli:main"

[project.entry-points.pytest11]
pytest-bisect-tests = "pytest_bisect_tests.pytest_plugin"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
